--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/bef" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://glassworkny.com/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
@@ -15,11 +15,12 @@ banner-desc: # add banner description
 
 # Author settings
 author-pic: face.jpg # your photo
-author-name: # your name
-about-author: # about author
-email: your-email@domain.com # your email
-phone: (496)-169-6557 # your pnone number
-website: https://dwayne.example.com # you website
+author-name:Tower Sign # your name
+about-author:Tower Signs & Awnings have been designing and producing
+ custom signs and awnings for companies in the New York Metro area since 1991. # about author
+email:TowerSigns@gmail.com # your email
+phone: (718) 335-0007/(718) 446-9000/(516) 283-5133# your pnone number
+website: https://glassworkny.com/ # you website
 
 # Social link
 google_url:    # add url link
