--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author-pic: face.jpg # your photo
 #author-name:Tower Sign # your name
 #about-author:Tower Signs & Awnings have been designing and producing
 
-email:TowerSigns@gmail.com # your email
+#email:TowerSigns@gmail.com # your email
 phone: (718) 335-0007/(718) 446-9000/(516) 283-5133# your pnone number
 website: https://glassworkny.com/ # you website
 
