--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 logo: # add logo name
 title:Glass Works|Glass Door & Window -Tower Sign Glass NY 
-description: Glass works - Glass Door ,Sliding Glass Door ,Glass door decals, and Glass Windows For Offices glass door , Store Front Glass door , And Building Glass    - Tower Signs
-#permalink: ':title/'
+description: Glass works - Glass Door For Offices And Building  - Tower Signs
+permalink: ':title/'
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://glassworkny.com" # the base hostname & protocol for your site, e.g. http://example.com
 
