--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 logo: # add logo name
 title:Glass Works|Glass Door & Window -Tower Sign Glass NY 
-description: Glass Door For Offices And Buildings
+#description: Glass Door For Offices And Buildings
 permalink: ':title/'
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://glassworkny.com" # the base hostname & protocol for your site, e.g. http://example.com
