--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Glass Works|Glass Door & Window -Tower Sign Glass NY
 permalink: ':title/'
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://glassworkny.com" # the base hostname & protocol for your site, e.g. http://example.com
-
+description: > Glass works for store ,office ,and business 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
 banner-title: # add banner title
